<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct">

  <ImageButton
      android:id="@+id/addProductPic"
      android:layout_width="91dp"
      android:layout_height="89dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:scaleType="fitXY"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@android:drawable/ic_menu_camera" />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/textInputLayout5"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/pricebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addProductDesc"
        android:hint="Price"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />
  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:id="@+id/textInputLayout2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/addProductPic">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/addProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameproduct" />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/textInputLayout4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/addProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />
  </android.support.design.widget.TextInputLayout>

  <Button
      android:id="@+id/cancelAddProduct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:layout_marginEnd="12dp"
      android:background="@drawable/round_button"
      android:onClick="cancelAddProd"
      android:text="@string/cancel"
      android:textColor="@android:color/background_light"
      app:layout_constraintEnd_toStartOf="@+id/submitAddProduct"
      app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

  <Button
      android:id="@+id/submitAddProduct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/round_button"
      android:onClick="saveProd"
      android:text="@string/add"
      android:textColor="@android:color/background_light"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />


  <android.support.design.widget.BottomNavigationView
      android:id="@+id/navigation"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="0dp"
      android:layout_marginEnd="0dp"
      android:background="?android:attr/windowBackground"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:menu="@menu/navigation" />

  <Spinner
      android:id="@+id/categorySpinner"
      android:layout_width="277dp"
      android:layout_height="39dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="4dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.084"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="wrap_content"
      android:layout_height="24dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:text="Category"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

</android.support.constraint.ConstraintLayout>