...
            android:background="@drawable/ic_edit_btn"
            android:onClick="editArtisanClick"
            android:visibility="visible"
            app:layout_collapseParallaxMultiplier="1.0" />

        <ImageButton
            android:id="@+id/addItem"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="68dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/add_item"
...
